Fix bug where button isn't aligned

--- a/static/css/default.css
+++ b/static/css/default.css
@@ -261,6 +261,10 @@ form {
     padding: 0;
 }
 
+#search-bar-and-button input[type="text"] {
+    float: left;
+}
+
 input[type="text"] {
     width: 500px;
     height: 24px;
